res/examples/invalid/call_noncallable_unit_using_variable.eg
let u = ();

u();

// out: TypeError: () is not callable